[package]
name = "hey-jarvis"
version = "0.1.2"
edition = "2021"
description = "Jarvis at your service."
license = "MIT"
keywords = ["gpt", "agent", "AI"]
repository = "https://github.com/GeauxEric/hey-jarvis"

[dependencies]
chatgpt_rs = "1.2.3"
clap = { version = "4.4.11", features = ["cargo"] }
tokio = { version = "1.35.0", features = ["rt-multi-thread"] }
anyhow = "1.0.75"